Fixed incorrect contructors with discriminator and readonly in generator.
Fixed #1206
Fixed #1208